--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
+DATABASE_URL="postgresql://postgres.rpvcsoqqmjhqcwidakwc:[evencreed8017]D@aws-1-eu-central-1.pooler.supabase.com:6543/postgres"
+DIRECT_URL="postgresql://postgres:[evencreed8017]@db.rpvcsoqqmjhqcwidakwc.supabase.co:5432/postgres"
 
+JWT_SECRET="TAg2QUbCsTUgAQOWFl4ixhT2P6Ocq2XjYXNWOb528Mc"
+PORT=4000
+CORS_ORIGINS="https://personal-site-mert-topacoglus-projects.vercel.app"
+ALLOW_SEED=true
