--- a/functions/package.json
+++ b/functions/package.json
@@ -1,1 +1,9 @@
-
+{
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^5.0.0",
+    "jsonwebtoken": "^9.0.0"
+  }
+}
