--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -3,7 +3,7 @@ name: Deploy to Firebase Functions
 on:
   push:
     branches:
-      - main   # sadece main branch'e push yapınca çalışacak
+      - main
 
 jobs:
   build-and-deploy:
@@ -18,11 +18,13 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
-
       - name: Install dependencies
         run: cd functions && npm install
 
       - name: Deploy to Firebase
-        run: firebase deploy --only functions --token "${{ secrets.FIREBASE_TOKEN }}"
+        uses: w9jds/firebase-action@v13.4.0
+        with:
+          args: deploy --only functions
+        env:
+          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+          PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
