--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Install dependencies
         run: cd functions && npm install
 
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@v13.4.0
-        with:
-          args: deploy --only functions
-        env:
-          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-          PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+- name: Deploy to Firebase
+  uses: w9jds/firebase-action@v13.4.0
+  with:
+    args: deploy --only functions
+  env:
+    GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+    PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
