--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch: # Elle de çalıştırabilmek için
 
 jobs:
   build-and-deploy:
@@ -21,10 +22,10 @@ jobs:
       - name: Install dependencies
         run: cd functions && npm install
 
-- name: Deploy to Firebase
-  uses: w9jds/firebase-action@v13.4.0
-  with:
-    args: deploy --only functions
-  env:
-    GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
-    PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@v13.4.0
+        with:
+          args: deploy --only functions
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+          PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
