--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -27,5 +27,5 @@ jobs:
         with:
           args: deploy --only functions
         env:
-          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
-          PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+  GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+  PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
