--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -4,28 +4,26 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: # Elle de çalıştırabilmek için
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
 
       - name: Install dependencies
-        run: cd functions && npm install
+        run: npm install
 
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@v13.4.0
         with:
           args: deploy --only functions
         env:
-  GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-  PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+          PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
