--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -6,26 +6,27 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18
 
       - name: Install dependencies
-  run: npm install
-  working-directory: ./backend
+        run: npm install
+        working-directory: ./backend   # <-- BURAYI kendi klasör ismine göre değiştir
 
       - name: Deploy to Firebase
-  uses: w9jds/firebase-action@v13.4.0
-  with:
-    args: deploy --only functions
-  env:
-    GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-    PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-  working-directory: ./backend
+        uses: w9jds/firebase-action@v13.4.0
+        with:
+          args: deploy --only functions
+        env:
+          GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+          PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+        working-directory: ./backend   # <-- BURAYI da aynı klasör ismiyle değiştir
