--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,16 +16,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: 18
 
       - name: Install dependencies
         run: npm install
-        working-directory: ./backend   # package.json hangi klasördeyse burayı güncelle
+        working-directory: backend   # <-- senin package.json burada
 
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@v13.4.0
         with:
           args: deploy --only functions
         env:
-          GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
           PROJECT_ID: evencreed-portfolio
