--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,12 +19,11 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: backend   # <-- senin package.json burada
+        working-directory: backend   # senin package.json burada
 
-       - name: Deploy to Firebase
-         uses: w9jds/firebase-action@v13.4.0
-         with:
-         args: deploy --only functions --force
-         env:
-         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-         GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@v13.4.0
+        with:
+          args: deploy --only functions --force
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
