--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
+    "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
