--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,14 @@
     "start": "node src/server.js",
     "prisma:studio": "npx prisma studio"
   },
-  "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.23.8"
-    "firebase-admin": "^12.0.0"
-  },
+ "dependencies": {
+  "express": "^4.18.2",
+  "cors": "^2.8.5",
+  "bcryptjs": "^2.4.3",
+  "jsonwebtoken": "^9.0.0",
+  "firebase-admin": "^11.10.1",
+  "dotenv": "^16.3.1"
+},
   "devDependencies": {
     "nodemon": "^3.1.0",
     "prisma": "^5.22.0"
