--- a/backend/package.json
+++ b/backend/package.json
@@ -5,19 +5,17 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
-    "prisma:studio": "npx prisma studio"
+    "start": "node src/server.js"
   },
- "dependencies": {
-  "express": "^4.18.2",
-  "cors": "^2.8.5",
-  "bcryptjs": "^2.4.3",
-  "jsonwebtoken": "^9.0.0",
-  "firebase-admin": "^11.10.1",
-  "dotenv": "^16.3.1"
-},
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
+    "firebase-admin": "^12.0.0",
+    "dotenv": "^16.3.1"
+  },
   "devDependencies": {
-    "nodemon": "^3.1.0",
-    "prisma": "^5.22.0"
+    "nodemon": "^3.1.0"
   }
 }
