--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@v13.4.0
         with:
-          args: deploy --only functions --force
+          args: deploy --only hosting --force
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
